Add player all ready event and update room handling logic
